[tool.poetry]
name = "headless-kivy"
version = "0.9.2"
description = "Headless renderer for Kivy framework"
authors = ["Sassan Haradji <sassanh@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = 'https://github.com/sassanh/headless-kivy/'
repository = 'https://github.com/sassanh/headless-kivy/'
keywords = ['kivy', 'headless', 'display', 'pytest', 'test']
packages = [{ include = "headless_kivy" }, { include = "headless_kivy_pytest" }]

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.8.0"

numpy = { version = "^1.24.2" }
kivy = { version = "^2.2.1" }

pypng = { version = "^0.20220715.0", optional = true }
python-strtobool = "^1.0.0"

[tool.poetry.extras]
test = ['pypng']

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.2"
ruff = "^0.5.0"
pyright = "^1.1.370"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check . --unsafe-fixes"
typecheck = "pyright -p pyproject.toml ."
sanity = ["typecheck", "lint"]

[tool.ruff]
lint.select = ['ALL']
lint.ignore = ['INP001', 'PLR0911', 'D203', 'D213']
lint.fixable = ['ALL']
lint.unfixable = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR0913", "PLR0915"]
"headless_kivy_pytest/*" = ["S101", "PLR0913", "PLR0915"]

[tool.ruff.format]
quote-style = 'single'

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ['typings']
